--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql"
+    "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql",
+    "predev": "yarn run types",
+    "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graphql.d.ts",
+    "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "dotenv": "^8.2.0",
+    "gql-merge": "^0.0.6",
     "graphql-to-typescript": "^0.1.2",
     "graphql-tools": "^4.0.6",
     "graphql-yoga": "^1.18.3",
+    "merge-graphql-schemas": "^1.7.4",
     "nodemon": "^2.0.2",
     "pg": "^7.16.0",
     "ts-node": "^8.5.4",
